@@ -1,9 +1,9 @@
 {
   "timestamp" : "2022-05-17T16:36:44Z",
   "count" : 1,
-  "count_minmax" : [ 0, 1 ],
+  "count_minmax" : [ 1, 1 ],
   "count_decinc" : [ -0, +1 ],
   "uniques" : 1,
-  "uniques_minmax" : [ 0, 1 ],
+  "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
 }
