@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-17T01:57:33Z",
+  "timestamp" : "2022-05-17T16:36:44Z",
   "count_outdated" : 448,
   "uniques_outdated" : 249,
-  "count" : 491,
-  "uniques" : 275,
+  "count" : 492,
+  "uniques" : 276,
   "clones" : [
     {
       "timestamp": "2022-05-04T00:00:00Z",
@@ -95,6 +95,13 @@
       "count_minmax": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-05-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
