@@ -1,3 +1,10 @@
+2022-05-17T16:36:44Z:
+* notice: last 14d: all unq: 44 14
+* notice: prev accum: outdated-all outdated-unq / all unq: 448 249 / 491 275
+* notice: next accum: outdated-all outdated-unq / all unq: 448 249 / 492 276
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: changed dates: [2022-05-16 2022-05-17]
+
 2022-05-17T01:57:33Z:
 * notice: last 14d: all unq: 43 14
 * notice: prev accum: outdated-all outdated-unq / all unq: 448 249 / 490 274
